VLC 2.2.0 - no chapters in MP4
VLC 2.1.5 played video mp4's with chapter markers and showed the prev/next chapter buttons.
VLC 2.2.0 doesn't show any chapter information with the same content and doesn't show chapter buttons either.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Migration Bot added Severity::normal Type::bug Version::master git + 1 deleted label
added Severity::normal Type::bug Version::master git + 1 deleted label
- Migration Bot changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Owner
What OS? What file?
- Jean-Baptiste Kempf added Component::Demuxers label and removed 1 deleted label
added Component::Demuxers label and removed 1 deleted label
- Author
Operating System: Windows 8.1 x64
File-Info:
Allgemein Vollständiger Name : Filename.mp4 Format : MPEG-4 Format-Profil : QuickTime Codec-ID : qt
Dateigröße : 22,9 GiB Dauer : 2h 1min Modus der Gesamtbitrate : variabel Gesamte Bitrate : 27,0 Mbps Filmname : Filename Künstler : Director Genre : Thriller Beschreibung : Text Aufnahmedatum : 2014 Kodierungs-Datum : UTC 2015-03-01 08:05:09 Tagging-Datum : UTC 2015-03-01 08:10:38 Kodierendes Programm : HandBrake 0.10.0 2014112200 Cover : Yes com.apple.quicktime.player.movie.audio.m : (Binary)Video ID : 1 Format : AVC Format/Info : Advanced Video Codec Format-Profil : High@L5.0 Format-Einstellungen für CABAC : Ja Format-Einstellungen für ReFrames : 8 frames Codec-ID : avc1 Codec-ID/Info : Advanced Video Coding Dauer : 2h 1min Source_Duration/String : 2h 1min Bitrate : 25,7 Mbps Breite : 1 920 Pixel Höhe : 816 Pixel Bildseitenverhältnis : 2,35:1 Modus der Bildwiederholungsrate : variabel Bildwiederholungsrate : 23,976 FPS minimale Bildwiederholungsrate : 11,989 FPS maximale Bildwiederholungsrate : 23,981 FPS ColorSpace : YUV ChromaSubsampling : 4:2:0 BitDepth/String : 8 bits Scantyp : progressiv Bits/(Pixel*Frame) : 0.685 Stream-Größe : 21,8 GiB (95%) Source_StreamSize/String : 21,8 GiB (95%) Titel : Apple Video Mediensteuerung / Apple Alias-Datensteuerung verwendete Encoder-Bibliothek : x264 core 142 r2479 dd79a61 Kodierungseinstellungen : cabac=1 / ref=8 / deblock=1:-1:-1 / analyse=0x3:0x133 / me=umh / subme=9 / psy=1 / psy_rd=1.00:0.15 / mixed_ref=1 / me_range=16 / chroma_me=1 / trellis=2 / 8x8dct=1 / cqm=0 / deadzone=21,11 / fast_pskip=1 / chroma_qp_offset=-3 / threads=18 / lookahead_threads=1 / sliced_threads=0 / nr=0 / decimate=1 / interlaced=0 / bluray_compat=0 / constrained_intra=0 / bframes=3 / b_pyramid=2 / b_adapt=2 / b_bias=0 / direct=3 / weightb=1 / open_gop=0 / weightp=2 / keyint=240 / keyint_min=24 / scenecut=40 / intra_refresh=0 / rc_lookahead=60 / rc=2pass / mbtree=1 / bitrate=25713 / ratetol=1.0 / qcomp=0.60 / qpmin=0 / qpmax=69 / qpstep=4 / cplxblur=20.0 / qblur=0.5 / ip_ratio=1.40 / aq=1:1.00 Tagging-Datum : UTC 2015-03-01 08:10:38 colour_primaries : BT.709 transfer_characteristics : BT.709 matrix_coefficients : BT.709 colour_range : Limited
Audio #1 (closed) ID : 2 Format : AAC Format/Info : Advanced Audio Codec Format-Profil : LC Codec-ID : 40 Dauer : 2h 1min Source_Duration/String : 2h 1min Bitraten-Modus : variabel Kanäle : 6 Kanäle Kanal-Positionen : Front: L C R, Side: L R, LFE Samplingrate : 48,0 KHz Source_StreamSize/String : 557 MiB (2%) Titel : Apple Ton Mediensteuerung / Apple Alias-Datensteuerung / Deutsch Sprache : Deutsch Tagging-Datum : UTC 2015-03-01 08:10:38
Audio #2 (closed) ID : 3 Format : AAC Format/Info : Advanced Audio Codec Format-Profil : LC Codec-ID : 40 Dauer : 2h 1min Source_Duration/String : 2h 1min Bitraten-Modus : variabel Kanäle : 6 Kanäle Kanal-Positionen : Front: L C R, Side: L R, LFE Samplingrate : 48,0 KHz Source_StreamSize/String : 557 MiB (2%) Titel : Apple Ton Mediensteuerung / Apple Alias-Datensteuerung / English Sprache : Englisch Tagging-Datum : UTC 2015-03-01 08:10:38
Menü ID : 4 Codec-ID : text Dauer : 2h 1min Titel : Apple Text-Mediensteuerung / Apple Alias-Datensteuerung Sprache : Deutsch Kodierungs-Datum : UTC 2015-03-01 08:04:15 Tagging-Datum : UTC 2015-03-01 08:10:38 00:00:00.000 : Chapter 1 00:11:13.130 : Chapter 2 00:21:33.040 : Chapter 3 00:31:32.930 : Chapter 4 00:41:40.530 : Chapter 5 00:51:48.680 : Chapter 6 01:01:37.110 : Chapter 7 01:12:37.560 : Chapter 8 01:22:18.180 : Chapter 9 01:30:47.900 : Chapter 10 01:40:34.230 : Chapter 11 01:49:32.520 : Chapter 12 01:55:25.160 : Chapter 13 Bitraten-Modus : VBR
Original author: noalias
- Jean-Baptiste Kempf changed title from VLC 2.2.0 - no chapters to VLC 2.2.0 - no chapters in MP4
changed title from VLC 2.2.0 - no chapters to VLC 2.2.0 - no chapters in MP4
- Owner
Can you share the file?
- Jean-Baptiste Kempf changed milestone to %2.2.1
changed milestone to %2.2.1
- Author
Sorry, i can't share this file. However, I could create a new mp4 with Quicktime chapter markers which should help to reproduce the error - in addition, it'd be smaller.
Original author: noalias
- Author
https://www.dropbox.com/s/xjhvu9nqd536nu0/test.mp4?dl=0
Please inform me when downloaded so I can delete the file. It is a short movie made by myself with chapter information added through Quicktime 7.
Original author: noalias
- Owner
This is 404
- Author
I have the same problem. OS is Windows 7 sp1 x64. Encoding with Handbrake 0.10. Chapter markers were fine in VLC 2.1.4 x64.
Using VLC 2.2.0 x64, chapter markers show CORRECTLY for fixed [constant bit] rate encoding AVC x264/mp4. They do NOT show with Variable rate [constant quality] encoding. Regression bug may be due to the final tag (from above example Bitraten-Modus : VBR) which is not present in a fixed bit rate file.
Original author: marty g
- Author
Did not test with Handbrake CBR but with own movie with fixed bitrate and chapter markers they do not show either.
Sorry for the messed up link, here again fixed below and above:
https://www.dropbox.com/s/xjhvu9nqd536nu0/test.mp4?dl=0
It also appears that the chapter markers in the movie coded with Handbrake the chapter markers are shown as subtitles.
Original author: noalias
- Author
Replying to [comment:10 noalias]:
Did not test with Handbrake CBR but with own movie with fixed bitrate and chapter markers they do not show either.
Sorry for the messed up link, here again fixed below and above:
https://www.dropbox.com/s/xjhvu9nqd536nu0/test.mp4?dl=0
It also appears that the chapter markers in the movie coded with Handbrake are shown as subtitles.
Original author: noalias
- Jean-Baptiste Kempf changed the description
changed the description
- Jean-Baptiste Kempf assigned to @fcartegnie and unassigned @MigrationBot
assigned to @fcartegnie and unassigned @MigrationBot
- Developer
That's the TX3G codec in text handler that makes skip AppleChapters.
AppleChapters are trash, they're inside codec data...
- Developer
commit 47f8a34b Author: Francois Cartegnie fcvlcdev@free.fr Date: Mon Mar 2 16:33:57 2015 +0100
demux: mp4: text/tx3g defaults to codec tx3G (fix [#14045](https://code.videolan.org/videolan/vlc/-/issues/14045))
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
- Author
It doesn't just appear with AppleChapters. The problem also appears with DVDFab encoded Videos with constant bit rates.
Original author: noalias
- Migration Bot removed Status::fixed label
removed Status::fixed label
- Migration Bot reopened
reopened
- Developer
have you tested builds > Mon Mar 2 16:33:57 2015 before reopening ?
- Author
No, sorry.
Original author: noalias
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
- Jean-Baptiste Kempf added Component::Demuxers: MP4 label and removed Component::Demuxers label
added Component::Demuxers: MP4 label and removed Component::Demuxers label
- Jean-Baptiste Kempf mentioned in issue #14149 (closed)
mentioned in issue #14149 (closed)