demux: mp4: text/tx3g defaults to codec tx3G (fix #14045)